--- a/ui/index.html
+++ b/ui/index.html
@@ -42,6 +42,6 @@
 
     </script>
 <body>
-<button onclick="">Stop the alert</button>
+<button onclick="clearInterval(totalSeconds)">Stop</button>
 </body>
 </html>
