--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Aknakereső</title>
     <script type="text/javascript" src="controller.js"></script>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <label id="minutes">00</label>:<label id="seconds">00</label>
@@ -13,7 +13,7 @@
     var minutesLabel = document.getElementById("minutes");
     var secondsLabel = document.getElementById("seconds");
     var totalSeconds = 0;
-    setInterval(setTime, 1000);
+    var intervalId = setInterval(setTime, 1000);
 
     function setTime()
     {
@@ -39,7 +39,7 @@
 
 <body onload="createTable();">
 
-    <button onclick="clearInterval(totalSeconds)">Stop</button>
+    <button onclick="clearInterval(intervalId);">Stop</button>
     <div id="screen">
         <div id="gameboard">
             <div id="header">
@@ -47,7 +47,7 @@
                     COUNTER
                 </div>
                 <div class="header" id="smiley"> <!--smiley-->
-                    <img id="button" onclick="button"; src="facesmile.gif">
+                    <img id="button" onclick="button();" src="facesmile.gif">
                     <!--<button onclick="button();" id="button"></button>-->
                 </div>
                 <div class="header" id="timer"> <!--timer-->
