--- a/ui/index.html
+++ b/ui/index.html
@@ -18,35 +18,8 @@
     <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
-<label id="minutes">00</label>:<label id="seconds">00</label>
-<script type="text/javascript">
 
-    var minutesLabel = document.getElementById("minutes");
-    var secondsLabel = document.getElementById("seconds");
-    var totalSeconds = 0;
-    var intervalId = setInterval(setTime, 1000);
 
-    function setTime()
-    {
-        ++totalSeconds;
-        secondsLabel.innerHTML = pad(totalSeconds%60);
-        minutesLabel.innerHTML = pad(parseInt(totalSeconds/60));
-    }
-
-    function pad(val)
-    {
-        var valString = val + "";
-        if(valString.length < 2)
-        {
-            return "0" + valString;
-        }
-        else
-        {
-            return valString;
-        }
-    }
-
-    </script>
 
 <body>
 <div id="difficulty">
@@ -65,23 +38,51 @@
         <div id="gameboard">
 
             <div id="header">
-                <div class="header" id="counter"> <!--bombcounter-->
-                    COUNTER
-                </div>
-                <div class="header" id="smiley"> <!--smiley-->
-                    <img id="button" onclick="button();" src="facesmile.gif">
-                    <!--<button onclick="button();" id="button"></button>-->
-                </div>
-                <div class="header" id="timer"> <!--timer-->
-                    TIMER
+                <div class="kozepre">
+                    <div class="header" id="counter">
+                        COUNTER
+                    </div>
+                    <div class="header" id="smiley">
+                        <img id="button" onclick="window.location.reload()" src="facesmile.gif">
+                    </div>
+                    <div class="header" id="timer"> <!--timer-->
+                        <label id="minutes">00</label>:<label id="seconds">00</label>
+                    </div>
                 </div>
             </div>
-
             <table id="tablazat">
             </table>
-
         </div>
     </div>
+
+    <script type="text/javascript">
+
+        var minutesLabel = document.getElementById("minutes");
+        var secondsLabel = document.getElementById("seconds");
+        var totalSeconds = 0;
+        var intervalId = setInterval(setTime, 1000);
+
+        function setTime()
+        {
+            ++totalSeconds;
+            secondsLabel.innerHTML = pad(totalSeconds%60);
+            minutesLabel.innerHTML = pad(parseInt(totalSeconds/60));
+        }
+
+        function pad(val)
+        {
+            var valString = val + "";
+            if(valString.length < 2)
+            {
+                return "0" + valString;
+            }
+            else
+            {
+                return valString;
+            }
+        }
+
+    </script>
 </body>
 </html>
 
